tests/checker/bad/balance_field.scilla
scilla_version 0

contract BalContr ()

field _balance : Uint128 = Uint128 1000000
